--- a/backend/kob/src/main/resources/application.properties
+++ b/backend/kob/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # 应用服务 WEB 访问端口
 server.port=4396
 
+spring.datasource.username=root
+spring.datasource.password=likeyang20031103
+spring.datasource.url=jdbc:mysql://localhost:3306/king_of_bots?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # THYMELEAF (ThymeleafAutoConfiguration)
 # 开启模板缓存（默认值： true ）
 spring.thymeleaf.cache=true
